[package]
name = "raytacing_test"
version = "0.1.0"
authors = ["Hendrik Trojan <h.trojan.github@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "scene_render"
harness = false
